feat: install html-webpack-plugin and yup
rus: устанавливает html-webpack-plugin

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "@hexlet/code",
   "version": "0.0.1",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/index.jsx",
   "type": "module",
+  "private": true,
   "engines": {
     "node": "14.x"
   },
@@ -43,7 +44,8 @@
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "regenerator-runtime": "^0.13.7"
+    "regenerator-runtime": "^0.13.7",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.16",
@@ -62,6 +64,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^1.6.0",
     "node-sass": "^6.0.0",
     "nodemon": "^2.0.7",
