--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "0.0.1",
   "description": "",
-  "main": "src/index.jsx",
+  "main": "src/index.js",
   "type": "module",
   "private": true,
   "engines": {
@@ -64,7 +64,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^1.6.0",
     "node-sass": "^6.0.0",
     "nodemon": "^2.0.7",
