--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "homepage": "",
   "dependencies": {
+    "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "core-js": "^3.12.1",
     "debug": "^4.3.1",
