--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "",
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
+    "@rollbar/react": "^0.8.0",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "classnames": "^2.3.1",
@@ -34,7 +35,7 @@
     "fastify-secure-session": "^2.3.1",
     "fastify-sensible": "^3.1.1",
     "fastify-socket.io": "^2.0.0",
-    "fastify-static": "^4.0.1",
+    "fastify-static": "^4.4.0",
     "formik": "^2.2.9",
     "http-errors": "^1.8.0",
     "i18next": "^21.2.4",
@@ -51,7 +52,9 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "regenerator-runtime": "^0.13.7",
+    "rollbar": "^2.24.0",
     "socket.io-client": "^4.2.0",
+    "typescript": "^4.4.3",
     "yup": "^0.32.9"
   },
   "devDependencies": {
@@ -72,7 +75,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "mini-css-extract-plugin": "^1.6.0",
-    "node-sass": "^6.0.0",
+    "node-sass": "^6.0.1",
     "nodemon": "^2.0.7",
     "postcss-loader": "^5.2.0",
     "postcss-preset-env": "^6.7.0",
@@ -80,6 +83,6 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.3.1"
   }
 }
