refactor: add a description and an author of the chat

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "0.0.1",
-  "description": "",
+  "description": "a simple chat for daily using",
   "main": "src/init.jsx",
   "type": "module",
   "private": true,
@@ -18,7 +18,7 @@
     "type": "git",
     "url": "git@github.com:hexlet-components/projects-frontend-l4-server.git"
   },
-  "author": "Kirill Mokevnin",
+  "author": "Maksim Guryanov",
   "license": "ISC",
   "homepage": "",
   "dependencies": {
