--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-i18next": "^11.12.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
+    "react-scroll": "^1.8.4",
     "regenerator-runtime": "^0.13.7",
     "rollbar": "^2.24.0",
     "socket.io-client": "^4.2.0",
