--- a/.github/workflows/linter.js.yml
+++ b/.github/workflows/linter.js.yml
@@ -27,3 +27,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: make install
     - run: make lint
+    - name: Deploy to heroku
+    - uses: akhileshns/heroku-deploy@v3.12.12
+      with:
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+        heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+        heroku_email: ${{secrets.HEROKU_EMAIL}}
